Added validation for requests unsing openapi spec. Added wrapper for that. Added CreateSession api.
